# flarion-challenge

./: Cargo.toml  README.md  datafusion_flow.md  flake.nix  implementation_checklist.md  spark_groupby_analysis.md
.github/workflows/: test.yml
benches/: regexp_benchmark.rs
src/: lib.rs  main.rs  regexp_extract.rs
tests/: compatibility_tests.rs  integration_tests.rs
