[package]
name = "regexp_extract_datafusion"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "55.2.0", features = ["prettyprint"] }
arrow-array = "55.2.0"
arrow-schema = "55.2.0"
datafusion = { version = "49.0.0", features = ["regex_expressions"] }
datafusion-common = "49.0.0"
datafusion-expr = "49.0.0"
datafusion-functions = "49.0.0"
datafusion-physical-expr = "49.0.0"
regex = "1.10"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[dev-dependencies]
tokio-test = "0.4"
