[package]
name = "regexp_extract_datafusion"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = "55.2.0"
datafusion = { version = "49.0.0", features = ["regex_expressions"] }
datafusion-common = "49.0.0"
datafusion-expr = "49.0.0"
regex = "1.10"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "regexp_benchmark"
harness = false
